[package]
name = "pylib"
version = "0.1.0"
authors = ["Arun Sharma <arun@sharma-home.net>"]
edition = "2018"
description = "A library for python compatible APIs"
license-file = "LICENSE"
homepage = "https://github.com/adsharma/py2many"
repository = "https://github.com/adsharma/pylib-rs"
readme = "README.md"

[dependencies]
tempfile = "3.2.0"
rand = "0.4.2"
once_cell = "1.7.2"