[package]
name = "pylib"
version = "0.3.0"
authors = ["Arun Sharma <arun@sharma-home.net>"]
edition = "2018"
description = "A library for python compatible APIs"
license-file = "LICENSE"
homepage = "https://github.com/adsharma/py2many"
repository = "https://github.com/adsharma/pylib-rs"
readme = "README.md"

[dependencies]
anyhow = "1.0"
once_cell = "1.7.2"
rand = "0.4.2"
tempfile = "3.2.0"
